// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Priority label should be rendered properly for priority -50 renders 'Medium' 1`] = `
<div>
  <span
    class="badge priority medium"
  >
    Medium
  </span>
</div>
`;

exports[`Priority label should be rendered properly for priority 0 renders 'Medium' 1`] = `
<div>
  <span
    class="badge priority medium"
  >
    Medium
  </span>
</div>
`;

exports[`Priority label should be rendered properly for priority 49.9 renders 'Medium' 1`] = `
<div>
  <span
    class="badge priority medium"
  >
    Medium
  </span>
</div>
`;

exports[`Priority label should be rendered properly for priority 50 renders 'High' 1`] = `
<div>
  <span
    class="badge priority high"
  >
    High
  </span>
</div>
`;

exports[`Priority label should be rendered properly for priority 62 renders 'High' 1`] = `
<div>
  <span
    class="badge priority high"
  >
    High
  </span>
</div>
`;

exports[`Priority label should be rendered properly for priority 74.9 renders 'High' 1`] = `
<div>
  <span
    class="badge priority high"
  >
    High
  </span>
</div>
`;

exports[`Priority label should be rendered properly for priority 75 renders 'Urgent' 1`] = `
<div>
  <span
    class="badge priority urgent"
  >
    Urgent
  </span>
</div>
`;

exports[`Priority label should be rendered properly for priority 123456 renders 'Urgent' 1`] = `
<div>
  <span
    class="badge priority urgent"
  >
    Urgent
  </span>
</div>
`;
